<resources>
    <string name="app_name">NetClan</string>
    <string name="let_s_get_started">LET\'S GET STARTED</string>
    <string name="welcome">Welcome</string>
    <string name="refine">Refine</string>
    <string name="select_your_availability">Select Your Availability</string>
    <string name="add_your_status">Add Your Status</string>
    <string name="sample_text">Hi community! I am open to new connection.</string>
    <string name="_1_km">1 KM</string>
    <string name="_10_km">100 KM</string>
    <string name="select_hyper_local_distance">Select Hyper local Distance</string>
    <string name="select_purpose">Select Purpose</string>
    <string name="save_and_explore">Save and Explore</string>
    <string name="hello_username">Hello username !!</string>
    <string name="unknown">Unknown</string>
    <string name="explore">Explore</string>
    <string name="network">Network</string>
    <string name="chat">Chat</string>
    <string name="contacts">Contacts</string>
    <string name="groups">Groups</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
</resources>