<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RefineActivity">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:background="@color/primary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/backIV"
                    android:src="@drawable/baseline_arrow_back"
                    android:layout_weight="1"
                    app:tint = "@color/white"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:textStyle="bold|normal"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/refine"
                    android:textColor="@color/white"
                    android:textSize="22sp" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linear01"
            android:layout_below="@id/toolbar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/select_your_availability"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/primary"
                android:layout_marginStart="25sp"
                android:layout_marginTop="15sp"/>


            <Spinner
                android:layout_marginTop="6sp"
                android:padding="12sp"
                android:layout_width="match_parent"
                android:layout_marginEnd="25sp"
                android:background="@drawable/spinner_back"
                android:elevation="3dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25sp"
                android:id="@+id/spinner"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/add_your_status"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/primary"
                android:layout_marginStart="25sp"
                android:layout_marginTop="15sp"/>

            <EditText
                android:gravity="start"
                android:padding="2sp"
                android:text="@string/sample_text"
                android:layout_marginTop="6sp"
                android:background="@drawable/spinner_back"
                android:layout_width="match_parent"
                android:layout_height="85sp"
                android:layout_marginEnd="25sp"
                android:layout_marginStart="25sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/select_hyper_local_distance"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/primary"
                android:layout_marginStart="25sp"
                android:layout_marginTop="15sp"/>

            <com.google.android.material.slider.Slider
                android:layout_marginTop="15sp"
                android:layout_width="match_parent"
                android:id="@+id/rangeSlider"
                app:thumbColor="@color/primary"
                android:layout_marginEnd="25sp"
                android:valueFrom="1"
                android:valueTo="100"
                android:layout_marginStart="25sp"
                android:layout_height="wrap_content"
                tools:ignore="SpeakableTextPresentCheck" />
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25sp"
                    android:text="@string/_1_km"
                    android:textColor="@color/primary"
                    />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_10_km"
                    android:layout_marginEnd="25sp"
                    android:textColor="@color/primary" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/select_purpose"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/primary"
                android:layout_marginStart="25sp"
                android:layout_marginTop="15sp"/>

            <LinearLayout
                android:layout_marginTop="15sp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="25sp"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primary"
                    app:cardCornerRadius="25sp"
                    >
                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Coffee"
                        android:fontFamily="sans-serif"
                        android:padding="10sp"
                        />

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primary"
                    app:cardCornerRadius="25sp"
                    android:layout_marginStart="15sp"
                    >
                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Business"
                        android:fontFamily="sans-serif"
                        android:padding="10sp"
                        />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primary"
                    android:layout_marginStart="15sp"
                    app:cardCornerRadius="25sp"
                    >
                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Hobbies"
                        android:fontFamily="sans-serif"
                        android:padding="10sp"
                        />

                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="15sp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="25sp"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primary"
                    app:cardCornerRadius="25sp"
                    >
                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Friendship"
                        android:fontFamily="sans-serif"
                        android:padding="10sp"
                        />

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primary"
                    app:cardCornerRadius="25sp"
                    android:layout_marginStart="15sp"
                    >
                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Movies"
                        android:fontFamily="sans-serif"
                        android:padding="10sp"
                        />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primary"
                    android:layout_marginStart="15sp"
                    app:cardCornerRadius="25sp"
                    >
                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dinning"
                        android:fontFamily="sans-serif"
                        android:padding="10sp"
                        />

                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="15sp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="25sp"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primary"
                    app:cardCornerRadius="25sp"
                    >
                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dating"
                        android:fontFamily="sans-serif"
                        android:padding="10sp"
                        />

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primary"
                    app:cardCornerRadius="25sp"
                    android:layout_marginStart="15sp"
                    >
                    <TextView
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Matrimony"
                        android:fontFamily="sans-serif"
                        android:padding="10sp"
                        />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:layout_marginTop="15sp"
                android:text="@string/save_and_explore"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/primary"
                />
        </LinearLayout>



    </RelativeLayout>

</layout>